# neversnake

./: CMakeLists.txt  README.md  historial.txt  image.cpp  image.h  main.cpp  snake.cpp
cabeceras/: rank.h
src/: image.cpp  main.cpp  rank.c  snake.cpp
